# lean-sdk

./: .editorconfig  .gitignore  LeanSDK.lean  README.md  TODO.md  lake-manifest.json  lakefile.toml  lean-sdk.code-workspace
LeanSDK/: JSON.lean
LeanSDK/Lean/: Environment.lean
python/: main.py  pyproject.toml
src/LeanSDK/: lakefile.toml
src/LeanSDK/LeanSDK/: JSON.lean  Main.lean
src/LeanSDK/LeanSDK/Lean/InfoTree/: ToJson.lean
src/python/: pyproject.toml
src/python/lean_sdk/: __init__.py  async_.py  schema.py
src/python/test/: exploration.ipynb  test_client.py  test_client_async.py  utils.py
test/Mathlib/: H20231110.sh  test.sh
test/MathlibTest/: MathlibTest.lean  README.md  lake-manifest.json  lakefile.toml
